Fix HTML formatting and add new video entries

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <!-- غيّر الروابط والعناوين والأوصاف حسب شغلك الفعلي -->
                 <div class="video-row" data-aos="fade-up" data-aos-delay="100">
                     <div class="video-container">
-                        <iframe src="https://www.youtube.com/embed/qVjkeRhklrA?rel=0" loading="lazy" allowfullscreen title="Reel - مثال 1"></iframe>
+                        <iframe src="https://www.youtube.com/embed/aY1pQbV9vnk" loading="lazy" allowfullscreen title="Reel - مثال 1"></iframe>
                     </div>
                     <div class="video-info">
                         <h3>Reel - مثال 1</h3>
@@ -105,7 +105,7 @@
 
                 <div class="video-row" data-aos="fade-up" data-aos-delay="200">
                     <div class="video-container">
-                        <iframe src="https://www.youtube.com/embed/aY1pQbV9vnk" loading="lazy" allowfullscreen title="Reel - مثال 2"></iframe>
+                        <iframe src="https://youtube.com/embed/2zZlqrjOe8g" loading="lazy" allowfullscreen title="Reel - مثال 2"></iframe>
                     </div>
                     <div class="video-info">
                         <h3>Reel - مثال 2</h3>
@@ -116,13 +116,39 @@
                         </div>
                     </div>
                 </div>
-
-                <div class="video-row" data-aos="fade-up" data-aos-delay="300">
+                <div class="video-row" data-aos="fade-up" data-aos-delay="200">
                     <div class="video-container">
-                        <iframe src="https://www.youtube.com/embed/iWC8ijscHeA" loading="lazy" allowfullscreen title="Reel - مثال 3"></iframe>
+                        <iframe src="https://youtube.com/embed/y04gR4VERV0" loading="lazy" allowfullscreen title="Reel - مثال 2"></iframe>
                     </div>
                     <div class="video-info">
                         <h3>Reel - مثال 3</h3>
+                        <p>تعديل سريع + تصحيح ألوان سينمائي + تأثيرات انتقال سلسة</p>
+                        <div class="video-tags">
+                            <span class="tag">تصحيح ألوان</span>
+                            <span class="tag">تأثيرات</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="video-row" data-aos="fade-up" data-aos-delay="300">
+                    <div class="video-container">
+                        <iframe src="https://youtube.com/embed/mLpMI7qb9Ec" loading="lazy" allowfullscreen title="Reel - مثال 3"></iframe>
+                    </div>
+                    <div class="video-info">
+                        <h3>Reel - مثال 4</h3>
+                        <p>ستوري تيلينج + نصوص متحركة + إيقاع سريع يناسب التريند</p>
+                        <div class="video-tags">
+                            <span class="tag">نصوص متحركة</span>
+                            <span class="tag">ستوري تيلينج</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="video-row" data-aos="fade-up" data-aos-delay="300">
+                    <div class="video-container">
+                        <iframe src="https://youtube.com/embed/FtHYgYlyvJA" loading="lazy" allowfullscreen title="Reel - مثال 3"></iframe>
+                    </div>
+                    <div class="video-info">
+                        <h3>Reel - مثال 5</h3>
                         <p>ستوري تيلينج + نصوص متحركة + إيقاع سريع يناسب التريند</p>
                         <div class="video-tags">
                             <span class="tag">نصوص متحركة</span>
